--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>1&ordf; Entrega de CG</title>
+        <title>Micro Machines</title>
         <style>
             body {
                 margin: 0px;
@@ -11,7 +11,9 @@
             }
         </style>
         <script src="three.js"></script>
-        <script src="entrega1.js"></script>
+        <script src="micromachines.js"></script>
+        <script src="car.js"></script>
+        <script src="track.js"></script>
     </head>
     <body>
         <script>
