Pause, Restart and Lives

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="micromachines.js"></script>
         <script src="car.js"></script>
         <script src="track.js"></script>
+        <script src="signs.js"></script>
     </head>
     <body>
         <script>
