texturas nao funcionam

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <script src="micromachines.js"></script>
         <script src="car.js"></script>
         <script src="track.js"></script>
-        <script src="signs.js"></script>
-    </head>
+<!--         <script src="signs.js"></script>
+ -->    </head>
     <body>
         <script>
             init();
